--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 ---
 language: node_js
+node_js:
+  # we recommend testing addons with the same minimum supported node version as Ember CLI
+  # so that your addon works for all apps
+  - "stable"
+
 sudo: false
 dist: trusty
-node_js: 'stable'
 
 addons:
   chrome: stable
@@ -11,12 +15,12 @@ cache:
   directories:
     - $HOME/.npm
     - node_modules
+    - $HOME/.cache # includes bowers cache
 
 env:
   # we recommend new addons test the current and previous LTS
   # as well as latest stable release (bonus points to beta/canary)
-  - EMBER_TRY_SCENARIO=ember-lts-2.4
-  - EMBER_TRY_SCENARIO=ember-lts-2.8
+  - EMBER_TRY_SCENARIO=ember-lts-2.16
   - EMBER_TRY_SCENARIO=ember-release
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
