--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 ---
 language: node_js
-node_js:
-  # we recommend testing addons with the same minimum supported node version as Ember CLI
-  # so that your addon works for all apps
-  - "stable"
-
 sudo: false
 dist: trusty
+node_js: 'stable'
 
 addons:
   chrome: stable
@@ -14,13 +10,10 @@ addons:
 cache:
   directories:
     - $HOME/.npm
-    - node_modules
-    - $HOME/.cache # includes bowers cache
 
 env:
-  # we recommend new addons test the current and previous LTS
-  # as well as latest stable release (bonus points to beta/canary)
   - EMBER_TRY_SCENARIO=ember-lts-2.16
+  - EMBER_TRY_SCENARIO=ember-lts-2.18
   - EMBER_TRY_SCENARIO=ember-release
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
@@ -32,19 +25,42 @@ matrix:
     - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
+  # Configuration.
   - npm config set spin false
-  - npm install -g npm@^5.7
+  - npm install -g codecov
+  - npm install -g greenkeeper-lockfile@1
+  - npm install -g @commitlint/travis-cli
   - npm --version
 
 install:
-  - npm ci
+  - if [[ $TRAVIS_BRANCH =~ greenkeeper || $TRAVIS_PULL_REQUEST_BRANCH =~ greenkeeper ]]; then npm install; else npm ci; fi
 
 before_script:
-  - sudo chown root /opt/google/chrome/chrome-sandbox
-  - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
+  - greenkeeper-lockfile-update
 
 script:
-  # Usually, it's ok to finish the test scenario without reverting
-  #  to the addon's original dependency state, skipping "cleanup".
-  - node_modules/.bin/eslint '**/*.js'
-  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
+  - commitlint-travis
+  - npm run lint:js
+  - COVERAGE=true node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
+
+after_script:
+  - greenkeeper-lockfile-upload
+
+after_success:
+  - codecov --file=coverage/lcov.info
+
+stages:
+  - test
+  - name: release
+    if: branch = master
+
+jobs:
+  include:
+    - stage: release
+      script: skip
+      env: []
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script:
+          - npx semantic-release
