--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-route-helpers",
-  "version": "2.0.1",
+  "version": "0.0.0-development",
   "description": "Routing template helpers",
   "keywords": [
     "ember-addon",
@@ -20,53 +20,58 @@
   },
   "scripts": {
     "build": "ember build",
+    "check-coverage": "istanbul check-coverage coverage/coverage-final.json --statements 50 --functions 50 --branches 50 --lines 50",
+    "commit": "git-cz",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint --ext .js,.ts --max-warnings 0 ./*.js addon app config tests",
     "start": "ember server",
     "test": "COVERAGE=true ember test",
-    "check-coverage": "istanbul check-coverage coverage/coverage-final.json --statements 95 --functions 95 --branches 95 --lines 95",
-    "commit": "git-cz",
-    "lint:js": "eslint --ext .js,.ts --max-warnings 0 ./*.js addon app config tests",
     "posttest": "npm run report-coverage && npm run check-coverage",
     "report-coverage": "istanbul report --include=coverage/coverage-final.json text",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "ember-cli-babel": "^6.17.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
+    "@ember/optional-features": "^0.6.3",
     "@semantic-release/changelog": "^3.0.1",
     "@semantic-release/git": "^7.0.5",
-    "broccoli-asset-rev": "2.4.6",
+    "broccoli-asset-rev": "^3.0.0",
     "commitizen": "^3.0.5",
     "cz-conventional-changelog": "^2.1.0",
-    "ember-ajax": "^3.0.0",
-    "ember-cli": "3.2.0",
+    "ember-ajax": "^4.0.0",
+    "ember-cli": "~3.5.1",
     "ember-cli-code-coverage": "^1.0.0-beta.7",
-    "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.2.1",
-    "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "1.7.0",
-    "ember-cli-qunit": "^4.3.2",
-    "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-eslint": "^5.0.0",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.0.0",
-    "ember-source": "3.2.2",
-    "ember-source-channel-url": "^1.0.1",
-    "ember-try": "^0.2.23",
-    "eslint": "^4.18.2",
-    "eslint-config-bbva": "^2.0.2",
+    "ember-qunit": "^3.4.1",
+    "ember-resolver": "^5.0.1",
+    "ember-source": "~3.5.1",
+    "ember-source-channel-url": "^1.1.0",
+    "ember-template-lint": "^1.0.0-beta.6",
+    "ember-try": "^1.0.0",
+    "eslint": "^5.9.0",
+    "eslint-config-bbva": "^2.0.3",
     "eslint-plugin-ember": "^6.0.1",
     "eslint-plugin-node": "^8.0.0",
     "istanbul": "^0.4.5",
-    "loader.js": "^4.2.3",
-    "semantic-release": "^15.12.4"
+    "loader.js": "^4.7.0",
+    "semantic-release": "^15.12.4",
+    "travis-deploy-once": "^5.0.9"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
