--- a/package.json
+++ b/package.json
@@ -19,63 +19,83 @@
     "url": "https://github.com/BBVAEngineering/ember-route-helpers"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
     "check-coverage": "istanbul check-coverage coverage/coverage-final.json --statements 50 --functions 50 --branches 50 --lines 50",
     "commit": "git-cz",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint --max-warnings 0 ./*.js addon app config tests",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember server",
-    "test": "COVERAGE=true ember test",
+    "test": "npm-run-all lint test:*",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each",
     "posttest": "npm run report-coverage && npm run check-coverage",
     "report-coverage": "istanbul report --include=coverage/coverage-final.json text",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.7.3"
+    "ember-cli-babel": "^7.26.6",
+    "ember-cli-htmlbars": "^5.7.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
-    "@ember/optional-features": "^0.7.0",
+    "@ember/optional-features": "^2.0.0",
+    "@ember/test-helpers": "^2.2.5",
+    "@embroider/test-setup": "^0.41.0",
+    "@glimmer/component": "^1.0.4",
+    "@glimmer/tracking": "^1.0.4",
     "@semantic-release/changelog": "^3.0.1",
     "@semantic-release/git": "^7.0.5",
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^2.1.0",
     "ember-ajax": "^5.0.0",
-    "ember-cli": "~3.11.0",
+    "ember-auto-import": "^1.11.3",
+    "ember-cli": "~3.27.0",
     "ember-cli-code-coverage": "^1.0.0-beta.7",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-eslint": "^5.0.0",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^2.0.0",
-    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
-    "ember-cli-uglify": "^3.0.0",
+    "ember-cli-terser": "^4.0.2",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^2.0.0",
+    "ember-export-application-global": "^2.0.1",
+    "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.1.2",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "~3.11.0",
-    "ember-source-channel-url": "^2.0.1",
-    "ember-template-lint": "^1.0.0-beta.6",
-    "ember-try": "~1.2.1",
-    "eslint": "^6.1.0",
+    "ember-page-title": "^6.2.2",
+    "ember-qunit": "^5.1.4",
+    "ember-resolver": "^8.0.2",
+    "ember-source": "~3.27.2",
+    "ember-source-channel-url": "^3.0.0",
+    "ember-template-lint": "^3.4.2",
+    "ember-try": "~1.4.0",
+    "eslint": "^7.27.0",
     "eslint-config-bbva": "^2.0.3",
-    "eslint-plugin-ember": "^6.0.1",
-    "eslint-plugin-node": "^9.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ember": "^10.4.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-qunit": "^6.1.1",
     "husky": "^3.0.0",
     "istanbul": "^0.4.5",
     "loader.js": "^4.7.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.0",
+    "qunit": "^2.15.0",
+    "qunit-dom": "^1.6.0",
     "semantic-release": "^15.12.4",
     "travis-deploy-once": "^5.0.9"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "10.* || >= 12"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
