--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember server",
-    "test": "npm-run-all lint test:*",
+    "test": "npm-run-all lint test:ember",
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each",
     "posttest": "npm run report-coverage && npm run check-coverage",
