--- a/package.json
+++ b/package.json
@@ -20,45 +20,50 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
-    "check-coverage": "istanbul check-coverage coverage/coverage-final.json --statements 50 --functions 50 --branches 50 --lines 50",
+    "check-coverage": "istanbul check-coverage coverage/coverage-final.json --statements 100 --branches 100 --functions 100 --lines 100",
     "commit": "git-cz",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
-    "lint:js": "eslint . --cache",
+    "lint:js": "eslint . --cache --max-warnings 0",
     "lint:js:fix": "eslint . --fix",
-    "start": "ember server",
+    "start": "ember serve",
     "test": "npm-run-all lint test:ember",
-    "test:ember": "ember test",
+    "test:ember": "COVERAGE=true ember test",
     "test:ember-compatibility": "ember try:each",
-    "posttest": "npm run report-coverage && npm run check-coverage",
+    "posttest": "npm run report-coverage && npm run check-coverage && npm run validate-coverage",
     "report-coverage": "istanbul report --include=coverage/coverage-final.json text",
     "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "travis-deploy-once": "travis-deploy-once",
+    "lint:style": "prettier --check .",
+    "lint:style:fix": "prettier --write .",
+    "prepare": "husky install",
+    "test:release": "semantic-release --branches=$(git rev-parse --abbrev-ref HEAD) --dry-run",
+    "validate-coverage": "test \"$(cat coverage/coverage-summary.json | json total.lines.total)\" -gt 0"
   },
   "dependencies": {
     "ember-cli-babel": "^7.26.6",
     "ember-cli-htmlbars": "^5.7.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.2.5",
     "@embroider/test-setup": "^0.41.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
-    "@semantic-release/changelog": "^3.0.1",
-    "@semantic-release/git": "^7.0.5",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^2.1.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "ember-ajax": "^5.0.0",
     "ember-auto-import": "^1.11.3",
     "ember-cli": "~3.27.0",
-    "ember-cli-code-coverage": "^1.0.0-beta.7",
+    "ember-cli-code-coverage": "^1.0.3",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
@@ -81,14 +86,16 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-qunit": "^6.1.1",
-    "husky": "^3.0.0",
+    "husky": "^7.0.1",
     "istanbul": "^0.4.5",
+    "json": "^11.0.0",
+    "lint-staged": "^11.0.1",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "qunit": "^2.15.0",
     "qunit-dom": "^1.6.0",
-    "semantic-release": "^15.12.4",
+    "semantic-release": "^17.4.4",
     "travis-deploy-once": "^5.0.9"
   },
   "engines": {
@@ -104,5 +111,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts}": "eslint --fix",
+    "*.{md,json,yaml,yml}": "prettier -w"
   }
 }
