--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
           - ember_try_scenario: ember-canary
             experimental: true
     continue-on-error: ${{ matrix.experimental }}
+    timeout-minutes: 5
     steps:
       - name: Checkout
         uses: actions/checkout@v2
