--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           files: ./coverage/lcov.info
           fail_ci_if_error: true
   regression:
+    if: github.ref != 'refs/heads/master'
     needs: test
     runs-on: ubuntu-latest
     name: Regression test - ${{ matrix.ember_try_scenario }} - Experimental ${{ matrix.experimental }}
@@ -61,7 +62,7 @@ jobs:
         run: yarn ember try:one ${{ matrix.ember_try_scenario }}
   release:
     if: github.ref == 'refs/heads/master'
-    needs: [test, regression]
+    needs: test
     runs-on: ubuntu-latest
     name: Release
     steps:
