--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,8 +77,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Configure CI Git User
         run: |
-          git config --global user.email adrigzr@users.noreply.github.com
-          git config --global user.name adrigzr
+          git config --global user.email eumendoza@users.noreply.github.com
+          git config --global user.name eumendoza
       - name: Install dependencies
         run: yarn install
       - name: Release
